<?xml version= "1.0" encoding= "utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/menuoptions"
                app:navigationIcon="@drawable/table" />

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/LayoutMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <Button
                            android:id="@+id/animesBt"
                            style="@style/Widget.AppCompat.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/Buttondim"
                            android:layout_gravity="center"
                            android:background="@drawable/buttback"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/menu1"
                            android:textColor="@color/setwall"
                            android:textSize="14sp"
                            android:textStyle="bold|italic" />

                        <Button
                            android:id="@+id/gamesBt"
                            style="@style/Widget.AppCompat.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/Buttondim"
                            android:background="@drawable/buttback"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/menu2"
                            android:textColor="@color/setwall"
                            android:textSize="14sp"
                            android:textStyle="bold|italic" />

                        <Button
                            android:id="@+id/oldanimesBt"
                            style="@style/Widget.AppCompat.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/Buttondim"
                            android:background="@drawable/buttback"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/menu3"
                            android:textColor="@color/setwall"
                            android:textSize="14sp"
                            android:textStyle="bold|italic" />

                        <Button
                            android:id="@+id/oldgamesBt"
                            style="@style/Widget.AppCompat.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/Buttondim"
                            android:background="@drawable/buttback"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/menu4"
                            android:textColor="@color/setwall"
                            android:textSize="14sp"
                            android:textStyle="bold|italic" />

                        <Button
                            android:id="@+id/filmsBt"
                            style="@style/Widget.AppCompat.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/Buttondim"
                            android:layout_weight="1"
                            android:background="@drawable/buttback"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/menu7"
                            android:textColor="@color/setwall"
                            android:textSize="14sp"
                            android:textStyle="bold|italic" />

                        <Button
                            android:id="@+id/seriesBt"
                            style="@style/Widget.AppCompat.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/Buttondim"
                            android:layout_weight="1"
                            android:background="@drawable/buttback"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/menu8"
                            android:textColor="@color/setwall"
                            android:textSize="14sp"
                            android:textStyle="bold|italic" />

                    </LinearLayout>
                </HorizontalScrollView>

            </com.google.android.material.appbar.AppBarLayout>

            <include
                android:id="@+id/include"
                layout="@layout/activity_generos"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>