<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="15dp">

    <Button
        android:id="@+id/HomeScrenId"
        android:layout_width="@dimen/optiontamWidth"
        android:layout_height="@dimen/optiontamHeight"
        android:background="@drawable/buttback"
        android:drawableLeft="@drawable/homescren"
        android:padding="5dp"
        android:text="@string/home"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/setwall"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        custom:layout_constraintBottom_toTopOf="@+id/LockScrenId"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="51dp"
        tools:layout_conversion_absoluteWidth="190dp" />

    <Button
        android:id="@+id/LockScrenId"
        android:layout_width="@dimen/optiontamWidth"
        android:layout_height="@dimen/optiontamHeight"
        android:background="@drawable/buttback"
        android:drawableLeft="@drawable/lockscren"
        android:fontFamily="sans-serif"
        android:padding="5dp"
        android:text="@string/lock"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/setwall"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        custom:layout_constraintBottom_toTopOf="@+id/guideline2"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="51dp"
        tools:layout_conversion_absoluteWidth="190dp" />

    <Button
        android:id="@+id/BothScrensId"
        android:layout_width="@dimen/optiontamWidth"
        android:layout_height="@dimen/optiontamHeight"
        android:background="@drawable/buttback"
        android:drawableLeft="@drawable/bothscrens"
        android:fontFamily="sans-serif-medium"
        android:padding="5dp"
        android:text="@string/both"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/setwall"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/LockScrenId"
        tools:layout_conversion_absoluteHeight="51dp"
        tools:layout_conversion_absoluteWidth="190dp" />

    <Button
        android:id="@+id/DownloadId"
        android:layout_width="@dimen/optiontamWidth"
        android:layout_height="@dimen/optiontamHeight"
        android:background="@drawable/buttback"
        android:drawableLeft="@drawable/download"
        android:fontFamily="sans-serif-medium"
        android:padding="5dp"
        android:text="@string/Download"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/setwall"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/BothScrensId"
        tools:layout_conversion_absoluteHeight="51dp"
        tools:layout_conversion_absoluteWidth="190dp" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        custom:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>